# efficient

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  efficient-mcp-README.md  finops-mcp-README.md  pyproject.toml  test-runner.sh  verify_scaffold.py
.claude-plugin/: marketplace.json
.devcontainer/: devcontainer.json
dashboard/: app.js  index.html  style.css
efficient/: activity.py
efficient/cli/: main.py
efficient/daemon/: app.py  auth.py  cache_guardian.py  clients.py  config.py  dashboard_routes.py  gateway.py  memory_files.py  metrics.py  openai_shim.py  providers.py  router.py  schemas.py
efficient/db/: client.py  collections.py  indexes.py  vector.py
efficient/ingest/: chunker.py  watcher.py
efficient/mcp/: daemon_client.py  server.py
efficient/modules/: agent_memory.py  codebase_graph.py  context_compressor.py  embeddings.py  hybrid_retrieval.py  semantic_cache.py
efficient/sdk/: __init__.py  memory_tool.py
examples/: README.md
examples/claude-hooks/: CLAUDE.md  README.md  efficient-autoindex.sh  recall-memory.sh  reindex-on-edit.sh  settings.json
finops/cli/: main.py
finops/daemon/: app.py  auth.py  config.py  dashboard_routes.py  metrics.py  router.py  strategies.py
finops/db/: client.py  collections.py  indexes.py
finops/mcp/: daemon_client.py  server.py
finops/modules/: _base.py  agent_memory.py  codebase_graph.py  context_compressor.py  embeddings.py  (+2 more)
plugin/: .mcp.json  docker-compose.dev.yml  docker-compose.yml
scripts/: install-to-project.sh
tests/: conftest.py  test_scaffold.py
(+77 files in other folders)
