[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "efficient"
version = "0.13.0"
description = "Token-saving developer toolkit for AI frameworks"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "motor>=3.6",
    "pymongo>=4.8",
    "click>=8.1",
    "httpx>=0.27",
    "sentence-transformers>=5.0",
    "transformers>=4.54,<4.58",
    "langchain-mongodb>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "python-dotenv>=1.0",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-javascript>=0.23",
    "llmlingua>=0.2",
    "rank-bm25>=0.2",
    "datasets>=2.20",
    "anthropic>=0.40",
    "openai>=1.0",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "anyio>=4.0",
]
hosted = [
    "voyageai>=0.3",
]

[project.scripts]
efficient = "efficient.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["efficient"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: real mongot + real local embedding model (slow, downloads model on first run)",
]
